Version 0.4pre2 -- DEVELOPMENT
------------------------------
- HTML based search of address books (javascript an option)
- Made folder listing look first at subscribed folders, making it
  faster, even if you don't have $folder_prefix set.
- Fixed some bugs with default sent and trash folders
- Fixed some bugs with folder manipulating


Version 0.4pre1 -- April 29, 2000
---------------------------------
- For speed's sake, unseen messages are only noted on INBOX in left
    folder list.  This will change with 0.5.
- Optomizations, fewer IMAP calls, more efficient sorting algorithms.
- Fixed all bugs listed in BUG
- When inside the Sent folder, it displays "To" instead of "From" 
- Added ability to go to Next and Previous message while reading a message
- Caching of the message headers in mailbox (much faster)
- Added a preference that allows users to customize how many messages
     they see when they index a mailbox
- Added flag status showing on message list (Answered, Flagged, and Seen)
- Now using PHP session management
- Parsing the body for URLs and Email addrs
- Added option to configure default folder directory. ie: ~/mail
- Configuration script added: config/conf.pl
- Addressbook with LDAP support
- Big speed improvements with folder listing
- Added Subscribe/Unsubscribe to folders
- Fixed bug in UW that didn't mark unseen messages
- Saving sent messages into $sent_folder
- It doesn't bail out if PHP wasn't compiled with --with-gettext.  
    It only uses english in this case.
- Added support for Cyrillic (thanks to Artem Botchkov for help)
- Included information on Russian Apache from Konstantin Riabitsev
- Honoring charset parameter for the body.
- Changed the way emptying of trash was done to work better
    across different IMAP servers


Version 0.3.1 -- March 13, 2000
-------------------------------
- Fixed a bug that didn't allow downloading of attachments

Version 0.3 (final) -- March 10, 2000
-------------------------------------