@@ -1,11 +1,12 @@
 Version 0.4pre2 -- DEVELOPMENT
 ------------------------------
+- Replying sets the "Answered" flag on the original message
+- When message is sent, it sends you to the folder you were looking at.
 - HTML based search of address books (javascript an option)
 - Made folder listing look first at subscribed folders, making it
-  faster, even if you don't have $folder_prefix set.
+     faster, even if you don't have $folder_prefix set.
 - Fixed some bugs with default sent and trash folders
 - Fixed some bugs with folder manipulating
-
 
 Version 0.4pre1 -- April 29, 2000
 ---------------------------------
@@ -35,6 +36,7 @@ Version 0.4pre1 -- April 29, 2000
 - Honoring charset parameter for the body.
 - Changed the way emptying of trash was done to work better
     across different IMAP servers
+
 
 
 Version 0.3.1 -- March 13, 2000
